src/objects/User_Order_Extension__c.object
<CustomObject>
    <fields>
        <fullName>ACR_Date_Time__c</fullName>
        <description>Scheduled attorney consultation date/time. Data integration will provide the data.</description>
        <label>ACR Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_Order_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>LZ Order Item ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LZ_Reopen__c</fullName>
        <description>Versioning of the User Order</description>
        <label>LZ Reopen</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_User_Order_ID__c</fullName>
        <label>LZ User Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Matter__c</fullName>
        <description>Data Integration will provide data.</description>
        <label>Legal Matter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Processing_Status_Date_Time__c</fullName>
        <label>Prior Processing Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prior_Processing_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Processing Status</label>
        <referenceTo>Processing_Status__c</referenceTo>
        <relationshipName>Prior_User_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Reason_Code__c</fullName>
        <label>Prior Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to Conduct Search</fullName>
                </value>
                <value>
                    <fullName>G&amp;S Issue</fullName>
                </value>
                <value>
                    <fullName>Materials Needed</fullName>
                </value>
                <value>
                    <fullName>Insufficient Materials</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Internal Clarification</fullName>
                </value>
                <value>
                    <fullName>Waiting for Consult</fullName>
                </value>
                <value>
                    <fullName>Customer Hold</fullName>
                </value>
                <value>
                    <fullName>Final Contact Attempt Needed</fullName>
                </value>
                <value>
                    <fullName>Missed Atty Appt</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Post Consult Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Status_Date_Time__c</fullName>
        <label>Processing Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processing Status</label>
        <referenceTo>Processing_Status__c</referenceTo>
        <relationshipName>User_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to Conduct Search</fullName>
                </value>
                <value>
                    <fullName>G&amp;S Issue</fullName>
                </value>
                <value>
                    <fullName>Materials Needed</fullName>
                </value>
                <value>
                    <fullName>Insufficient Materials</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Internal Clarification</fullName>
                </value>
                <value>
                    <fullName>Waiting for Consult</fullName>
                </value>
                <value>
                    <fullName>Customer Hold</fullName>
                </value>
                <value>
                    <fullName>Final Contact Attempt Needed</fullName>
                </value>
                <value>
                    <fullName>Missed Atty Appt</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Post Consult Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Order Extension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LZ_Order_Item_ID__c</columns>
        <columns>Prior_Processing_Status__c</columns>
        <columns>Prior_Processing_Status_Date_Time__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Processing_Status_Date_Time__c</columns>
        <columns>LZ_User_Order_ID__c</columns>
        <columns>LZ_Reopen__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>LZ_Order_Item_ID__c</columns>
        <columns>Prior_Processing_Status__c</columns>
        <columns>Prior_Processing_Status_Date_Time__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Processing_Status_Date_Time__c</columns>
        <columns>LZ_User_Order_ID__c</columns>
        <columns>LZ_Reopen__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UOE-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Order Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>